@@ -1,3 +1,3 @@
 Set upstream metadata fields: Bug-Submit (from ./configure), Name (from ./configure).
 Certainty: certain
-Fixed-Lintian-Tags: upstream-metadata-file-is-missing
+Fixed-Lintian-Tags: upstream-metadata-file-is-missing, upstream-metadata-missing-bug-tracking
